<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/settings_dialog_weather_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_small_city"
        app:layout_constraintBottom_toBottomOf="@+id/settings_dialog_weather_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_dialog_weather_name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/settings_dialog_weather_name_hint"
        style="@style/DialogItemHint"
        android:text="@string/settings_dialog_weather_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/settings_dialog_weather_name"
        style="@style/DialogItemSpinner"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/settings_dialog_weather_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dialog_weather_name_hint"
        tools:entries="@array/months"
        tools:text="Бишкек" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/settings_dialog_weather_temperature_wrap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/settings_dialog_weather_temperature_unit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dialog_weather_name">

        <EditText
            android:id="@+id/settings_dialog_weather_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dialog_weather_temperature"
            tools:text="12" />

    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/settings_dialog_weather_temperature_unit"
        style="@style/DialogItemSpinner"
        android:layout_width="72dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:entries="@array/temperature_units"
        app:layout_constraintBottom_toBottomOf="@+id/settings_dialog_weather_temperature_wrap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/settings_dialog_weather_temperature_wrap" />

    <TextView
        android:id="@+id/settings_dialog_weather_month_hint"
        style="@style/DialogItemHint"
        android:layout_marginTop="12dp"
        android:text="@string/settings_dialog_weather_month"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dialog_weather_temperature_wrap" />

    <Spinner
        android:id="@+id/settings_dialog_weather_month"
        style="@style/DialogItemSpinner"
        android:layout_width="0dp"
        android:layout_marginTop="4dp"
        android:entries="@array/months"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dialog_weather_month_hint" />

</android.support.constraint.ConstraintLayout>