<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cityweather_filter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:clickable="true"
    android:elevation="4dp"
    android:orientation="vertical"
    android:visibility="gone"
    tools:ignore="KeyboardInaccessibleWidget"
    tools:visibility="visible">

    <android.support.v7.widget.CardView
        style="@style/FilterItemsLayout"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/cityweather_filter_seasons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="horizontal"
            tools:ignore="ContentDescription">

            <ImageButton
                style="@style/FilterImageItem"
                android:src="@drawable/ic_large_season_winter" />

            <ImageButton
                style="@style/FilterImageItem"
                android:src="@drawable/ic_large_season_spring"
                tools:alpha="1"
                tools:background="@color/black_transparent_light" />

            <ImageButton
                style="@style/FilterImageItem"
                android:src="@drawable/ic_large_season_summer" />

            <ImageButton
                style="@style/FilterImageItem"
                android:src="@drawable/ic_large_season_autumn" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/FilterItemsLayout"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:id="@+id/cityweather_filter_temperatureunits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:orientation="horizontal">

            <TextView
                style="@style/FilterTextItem"
                android:text="@string/temperature_unit_celsius_short" />

            <TextView
                style="@style/FilterTextItem"
                android:text="@string/temperature_unit_fahrenheit_short"
                tools:alpha="1"
                tools:background="@color/black_transparent_light" />

            <TextView
                style="@style/FilterTextItem"
                android:text="@string/temperature_unit_kelvin_short" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <!--<android.support.v7.widget.CardView-->
    <!--style="@style/FilterItemsLayout"-->
    <!--app:cardCornerRadius="6dp"-->
    <!--app:cardElevation="4dp">-->

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:paddingEnd="16dp"-->
    <!--android:paddingStart="16dp">-->

    <!--<Button-->
    <!--android:id="@+id/cityweather_filter_year_minus"-->
    <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
    <!--android:layout_width="48dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:text="-"-->
    <!--android:textSize="16sp" />-->

    <!--<EditText-->
    <!--android:id="@+id/cityweather_filter_year_field"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_weight="1"-->
    <!--android:background="@null"-->
    <!--android:gravity="center"-->
    <!--android:hint="Год"-->
    <!--android:inputType="date"-->
    <!--android:textColor="@color/colorPrimaryDark"-->
    <!--android:textSize="16sp"-->
    <!--tools:text="2018" />-->

    <!--<Button-->
    <!--android:id="@+id/cityweather_filter_year_plus"-->
    <!--style="@style/Widget.AppCompat.Button.Borderless.Colored"-->
    <!--android:layout_width="48dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:text="+"-->
    <!--android:textSize="16sp" />-->

    <!--</LinearLayout>-->

    <!--</android.support.v7.widget.CardView>-->

    <LinearLayout
        android:id="@+id/cityweather_filter_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/black_transparent_light"
        android:foreground="?selectableItemBackground"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_small_filter"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="Применить"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>